--- a/Web Prac/public/index.html
+++ b/Web Prac/public/index.html
@@ -7,14 +7,15 @@
     <title>Welcome to Firebase Hosting</title>
 
     <body>
+      <h1 id="infoUser"></h1>
       <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
      <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-auth.js"></script>
-    <button id="googleSignIn">Sign In With Google</button><br>
-    
+    <button id="googleSignIn">Sign In with Google</button><br>
+    <button id="githubSignIn">Sign In with GitHub</button><br>
     <button id="signOut">Sign out</button>
      <script src="file.js"></script>
     </body>
