Fix error in index.html

--- a/Web Prac/public/index.html
+++ b/Web Prac/public/index.html
@@ -18,6 +18,7 @@
      <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-performance.js"></script>
     <button id="googleSignIn">Sign In with Google</button><br>
     <button id="githubSignIn">Sign In with GitHub</button><br>
+    <button id="signInWithMicrosoft">Sign In With Microsoft</button><br>
     <button id="guestUser">Continue as guest</button><br>
     <button id="signOut">Sign out</button>
      <script src="file.js"></script>
